# C_AlgorithmsAndDataStructures

./: CMakeLists.txt
dependencies/ctest/include/engine/: test-helper.h
source/: main.c
source/algorithms/Array/: find.c  find.h  modify.c  modify.h
source/ctest/: test.c  test.h
source/ctest/color/: color.h
source/ctest/engine/: test-helper.c  test-print.c  test-print.h
source/structures/Array/: iarray.c  iarray.h
source/structures/Catalog/: catalog.c  catalog.h
source/structures/List/: IntList.c  IntList.h
source/tests/: test-array.h  test-catalog.h  test-list.h
sources/: main.c
sources/Array/: find.c  find.h  test-array.h
sources/test-engine/: test.c  test.h
sources/tests/: test-array.h
